added find by id

--- a/views/diary/my-diary.hbs
+++ b/views/diary/my-diary.hbs
@@ -59,7 +59,7 @@
             {{/if}}
 
             <div class="card-footer">
-              <a href="#" type="button" class="btn btn-success">Update</a>
+              <a href="/diary/{{id}}" type="button" class="btn btn-success">Open</a>
               <a href="#" type="button" class="btn btn-primary">Update</a>
               <a href="#" type="button" class="btn btn-danger">Delete</a>
             </div>
