--- a/views/diary/my-diary.hbs
+++ b/views/diary/my-diary.hbs
@@ -60,7 +60,7 @@
 
             <div class="card-footer">
               <a href="/diary/{{id}}" type="button" class="btn btn-success">Open</a>
-              <a href="#" type="button" class="btn btn-primary">Update</a>
+              <a href="/diary/update/{{id}}" type="button" class="btn btn-primary">Update</a>
               <a href="#" type="button" class="btn btn-danger">Delete</a>
             </div>
           </div>
