--- a/views/diary/one-diary.hbs
+++ b/views/diary/one-diary.hbs
@@ -30,4 +30,52 @@
       </div>
     </div>
   </div>
+
+  {{! Comment }}
+  <div class="row">
+    <div class="col-md-6 offset-3">
+      <div class="card-body">
+        <form
+          action="/diary/update/{{diary.id}}"
+          method="post"
+          enctype="application/x-www-form-urlencoded"
+        >
+          <div class="mb-3">
+            <label for="comment" class="form-label">Add Comment</label>
+            <textarea
+              class="form-control"
+              name="comment"
+              id="comment"
+              rows="4"
+            ></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-primary mt-3">Add</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  {{! Comment list }}
+  <div class="row">
+    <div class="col-md-8 offset-2">
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-2">
+            <img src="https://img.freepik.com/premium-vector/bearded-man-avatar-man-vector-portrait_9385-36.jpg" class="img-fluid rounded-start" alt="..." />
+          </div>
+          <div class="col-md-10">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text
+                below as a natural lead-in to additional content. This content
+                is a little bit longer.</p>
+              <p class="card-text"><small class="text-body-secondary">Last
+                  updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
