added comment action

--- a/views/diary/one-diary.hbs
+++ b/views/diary/one-diary.hbs
@@ -36,7 +36,7 @@
     <div class="col-md-6 offset-3">
       <div class="card-body">
         <form
-          action="/diary/update/{{diary.id}}"
+          action="/diary/comment/{{diary.id}}"
           method="post"
           enctype="application/x-www-form-urlencoded"
         >
