--- a/views/diary/one-diary.hbs
+++ b/views/diary/one-diary.hbs
@@ -59,23 +59,28 @@
   {{! Comment list }}
   <div class="row">
     <div class="col-md-8 offset-2">
-      <div class="card mb-3" style="max-width: 540px;">
-        <div class="row g-0">
-          <div class="col-md-2">
-            <img src="https://img.freepik.com/premium-vector/bearded-man-avatar-man-vector-portrait_9385-36.jpg" class="img-fluid rounded-start" alt="..." />
-          </div>
-          <div class="col-md-10">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text
-                below as a natural lead-in to additional content. This content
-                is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last
-                  updated 3 mins ago</small></p>
+      {{#if comments}}
+        {{#each comments}}
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-2">
+                <img
+                  src="https://img.freepik.com/premium-vector/bearded-man-avatar-man-vector-portrait_9385-36.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-10">
+                <div class="card-body">
+                  <h5 class="card-title">Username</h5>
+                  <p class="card-text">{{comment}}</p>
+                  <p class="card-text"><small class="text-body-secondary">{{createdAt}}</small></p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
+        {{/each}}
+      {{/if}}
     </div>
   </div>
 </div>
