--- a/views/diary/my-diary.hbs
+++ b/views/diary/my-diary.hbs
@@ -46,7 +46,7 @@
                     style="height: 30px;"
                     alt="..."
                   />
-                  <h5 class="card-title">Username</h5>
+                  <h5 class="card-title">{{user.name}}</h5>
                 </a>
               </div>
               <p class="card-text">{{text}}</p>
