--- a/views/diary/one-diary.hbs
+++ b/views/diary/one-diary.hbs
@@ -11,7 +11,7 @@
                 style="height: 30px;"
                 alt="..."
               />
-              <h5 class="card-title">Username</h5>
+              <h5 class="card-title">{{diary.user.name}}</h5>
             </a>
           </div>
           <p class="card-text">{{diary.text}}</p>
