--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -23,7 +23,7 @@
             <a class="nav-link" href="#">Lenta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My Profile</a>
+            <a class="nav-link" href="/user/profile/{{user.id}}">My Profile</a>
           </li>
            <li class="nav-item">
             <a class="nav-link" href="/auth/logout">Logout</a>
