--- a/views/user/myProfile.hbs
+++ b/views/user/myProfile.hbs
@@ -14,6 +14,10 @@
             <li class="list-group-item">Diaries: {{diariesLength}}</li>
           </ul>
         </div>
+        <div class="card-footer">
+          <a href="#" type="button" class="btn btn-success">Update</a>
+          <a href="/auth/logout" type="button" class="btn btn-danger">Logout</a>
+        </div>
       </div>
     </div>
   </div>
