--- a/views/user/update-profile.hbs
+++ b/views/user/update-profile.hbs
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-6 offset-3">
-      <form>
+      <form method="POST" accept="/user/profile/update">
         <div class="mb-3">
           <label for="email" class="form-label">Name</label>
           <input
