added all diary page

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -20,7 +20,7 @@
               Dairies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Lenta</a>
+            <a class="nav-link" href="/diary/all">Lenta</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/user/profile/my">My Profile</a>
