--- a/views/diary/one-diary.hbs
+++ b/views/diary/one-diary.hbs
@@ -72,7 +72,7 @@
               </div>
               <div class="col-md-10">
                 <div class="card-body">
-                  <h5 class="card-title">Username</h5>
+                  <h5 class="card-title">{{name}}</h5>
                   <p class="card-text">{{comment}}</p>
                   <p class="card-text"><small class="text-body-secondary">{{createdAt}}</small></p>
                 </div>
