--- a/views/diary/my-diary.hbs
+++ b/views/diary/my-diary.hbs
@@ -3,6 +3,9 @@
     <div class="col-md-6 offset-3">
       <div class="card mt-3">
         <div class="card-body">
+          {{#if errorMessage}}
+            <div class="alert alert-danger" role="alert">{{errorMessage}}</div>
+          {{/if}}
           <form
             action="/diary/add"
             method="post"
