--- a/views/diary/one-diary.hbs
+++ b/views/diary/one-diary.hbs
@@ -35,6 +35,9 @@
   <div class="row">
     <div class="col-md-6 offset-3">
       <div class="card-body">
+        {{#if errorMessage}}
+          <div class="alert alert-danger" role="alert">{{errorMessage}}</div>
+        {{/if}}
         <form
           action="/diary/comment/{{diary.id}}"
           method="post"
@@ -74,7 +77,9 @@
                 <div class="card-body">
                   <h5 class="card-title">{{name}}</h5>
                   <p class="card-text">{{comment}}</p>
-                  <p class="card-text"><small class="text-body-secondary">{{createdAt}}</small></p>
+                  <p class="card-text"><small
+                      class="text-body-secondary"
+                    >{{createdAt}}</small></p>
                 </div>
               </div>
             </div>
