--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,7 +1,7 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6 offset-3">
-        <form action="/auth/login" method="POST" enctype="application/x-www-form-urlencoded">
+        <form action="/auth/login" method="POST" enctype="application/x-www-form-urlencoded" novalidate>
           {{#if errorMessage}}
             <div class="alert alert-danger" role="alert">{{errorMessage}}</div>
           {{/if}}
