done upload file

--- a/views/diary/my-diary.hbs
+++ b/views/diary/my-diary.hbs
@@ -9,13 +9,13 @@
           <form
             action="/diary/add"
             method="post"
-            enctype="application/x-www-form-urlencoded"
+            enctype="multipart/form-data"
           >
             <div class="mb-3">
               <label for="imageUrl" class="form-label">Image Url</label>
               <input
                 class="form-control"
-                type="text"
+                type="file"
                 name="imageUrl"
                 id="imageUrl"
               />
