--- a/views/diary/all-diary.hbs
+++ b/views/diary/all-diary.hbs
@@ -33,6 +33,15 @@
             </div>
           </div>
         {{/each}}
+        <nav aria-label="...">
+          <ul class="pagination pagination-lg justify-content-center">
+            <li class="page-item active" aria-current="page">
+              <span class="page-link">1</span>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+          </ul>
+        </nav>
       {{else}}
         <h1>No diaries added yet</h1>
       {{/if}}
