--- a/views/diary/all-diary.hbs
+++ b/views/diary/all-diary.hbs
@@ -35,11 +35,37 @@
         {{/each}}
         <nav aria-label="...">
           <ul class="pagination pagination-lg justify-content-center">
-            <li class="page-item active" aria-current="page">
-              <span class="page-link">1</span>
+            {{#if currentPageAndPrevPageNotEqualOne}}
+              <li class="page-item" aria-current="page">
+                <a class="page-link" href="/diary/all?page=1">1</a>
+              </li>
+            {{/if}}
+
+            {{#if hasPrevPage}}
+              <li class="page-item"><a
+                  class="page-link"
+                  href="/diary/all?page={{previousPage}}"
+                >{{previousPage}}</a></li>
+            {{/if}}
+
+            <li class="page-item active"><a
+                class="page-link"
+                href="/diary/all?page={{currentPage}}"
+              >{{currentPage}}</a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
+
+            {{#if hasNextPage}}
+              <li class="page-item"><a
+                  class="page-link"
+                  href="/diary/all?page={{nextPage}}"
+                >{{nextPage}}</a></li>
+            {{/if}}
+            {{#if lastPageChecking}}
+              <li class="page-item"><a
+                  class="page-link"
+                  href="/diary/all?page={{lastPage}}"
+                >{{lastPage}}</a></li>
+            {{/if}}
           </ul>
         </nav>
       {{else}}
